--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,7 +63,10 @@
                     android:gravity="left|center_vertical"
                     android:drawableBottom="@color/light_grey"
                     android:paddingLeft="30dip"
-                    android:hint="@string/login_user_placeholder" />
+                    android:hint="@string/login_user_placeholder"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    />
 
             </LinearLayout>
 
